force-app/main/default/objects/Payment_Request__c/fields/Last_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Date__c</fullName>
    <label>Last Attempt Date</label>
    <type>DateTime</type>
</CustomField>