force-app/main/default/objects/Payment_Request__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <description>Stores the mock checkout URL generated for the customer.</description>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>